# llm-zoomcamp-2026

cohorts/2026/01-agentic-rag/homework1_solution/: CHEATSHEET.md  homework1.ipynb  pyproject.toml
cohorts/2026/02-vector-search/homework2_solution/: .gitignore  CHEATSHEET.md  homework2.code-workspace  homework2.ipynb  main.py  pyproject.toml  run_homework.py
